--- a/index.html
+++ b/index.html
@@ -10,12 +10,25 @@
     <header class="header">
         <div class="header__top">
            <div class="container">
-               <a href="#"></a>
-               <a href=""></a>
+               <a href="#">+38 (096) 309 21 45</a>
+               <a href="#">layout585@gmail.com</a>
+               <a href="#">Бесплатная консультация</a>
            </div> 
         </div>
         <div class="header__content">
-
+           <div class="header__logo">
+               <a href="#">
+                   <img src="img/logo.png" alt="">
+                </a>
+            </div>
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">О компании</a></li>
+                    <li><a href="#">Услуги</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </nav>        
         </div>
     </header>
 </body>
