--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500&display=swap&subset=cyrillic"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,26 +16,30 @@
     <header class="header">
         <div class="header__top">
             <div class="container">
-                <a href="#">+38 (096) 309 21 45</a>
-                <a href="#">layout585@gmail.com</a>
-                <a href="#">Бесплатная консультация</a>
+                <div class="header__contacts">
+                    <a class="header__phone" href="tel:380963092145">+38 (096) 309 21 45</a>
+                    <a class="header__email" href="#">layout585@gmail.com</a>
+                    <a class="header__btn" href="#">Бесплатная консультация</a>
+                </div>
             </div>
         </div>
         <div class="header__content">
             <div class="container">
-                <div class="header__logo">
-                    <a href="#">
-                        <img src="img/logo.png" alt="">
-                    </a>
+                <div class="header__content-inner">
+                    <div class="header__logo">
+                        <a href="#">
+                            <img src="img/logo.png" alt="">
+                        </a>
+                    </div>
+                    <nav class="menu">
+                        <ul>
+                            <li><a href="#">Главная</a></li>
+                            <li><a href="#">О компании</a></li>
+                            <li><a href="#">Услуги</a></li>
+                            <li><a href="#">Контакты</a></li>
+                        </ul>
+                    </nav>
                 </div>
-                <nav class="menu">
-                    <ul>
-                        <li><a href="#">Главная</a></li>
-                        <li><a href="#">О компании</a></li>
-                        <li><a href="#">Услуги</a></li>
-                        <li><a href="#">Контакты</a></li>
-                    </ul>
-                </nav>
             </div>
         </div>
     </header>
