--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500&display=swap&subset=cyrillic"
         rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -18,7 +19,7 @@
             <div class="container">
                 <div class="header__contacts">
                     <a class="header__phone" href="tel:380963092145">+38 (096) 309 21 45</a>
-                    <a class="header__email" href="#">layout585@gmail.com</a>
+                    <a class="header__email" href="mailto:layout585@gmail.com">layout585@gmail.com</a>
                     <a class="header__btn" href="#">Бесплатная консультация</a>
                 </div>
             </div>
