--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                             Полное прекращение существования юридического лица с сохранением легальности всей предыдущей
                             деятельности.
                         </div>
-                        <div data-fancybox data-src="#modal" href="javascript:;" class="slider__btn default-btn">
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="slider__btn default-btn">
                             Оставить заявку
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="slider__item">
@@ -73,9 +73,9 @@
                             Полное прекращение существования юридического лица с сохранением легальности всей предыдущей
                             деятельности.
                         </div>
-                        <div data-fancybox data-src="#modal" href="javascript:;" class="slider__btn default-btn">
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="slider__btn default-btn">
                             Оставить заявку
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="slider__item">
@@ -87,9 +87,9 @@
                             Полное прекращение существования юридического лица с сохранением легальности всей предыдущей
                             деятельности.
                         </div>
-                        <div data-fancybox data-src="#modal" href="javascript:;" class="slider__btn default-btn">
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="slider__btn default-btn">
                             Оставить заявку
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
