--- a/index.html
+++ b/index.html
@@ -96,6 +96,75 @@
         </div> 
     </section>
 
+    <section class="about">
+        <div class="contaner">
+            <div class="about__top">
+                <div class="about_title-box">
+                    <div class="about__title">
+                        Наши Услуги
+                    </div>
+                    <div class="about__text">
+                        Комплексный подход к вашему вопросу, своевременная правовую помощь, представление интересов во
+                        всех судебных инстанциях.
+                    </div>
+                </div>
+                <a href="" class="about__btn">
+                    Показать все услуги
+                </a>
+            </div>
+            <div class="about__items">
+                <div class="about_item">
+                    <img src="img/about-1.png" alt="">
+                    <div class="about__item-title">
+                        Банкротство и ликвидация
+                    </div>
+                    <div class="about__item-text">
+                        Полное прекращение существования юридического лица с сохранением легальности всей предыдущей
+                        деятельности
+                    </div>
+                    <div class="about_item-btn">
+                        <a class="about__item-link" href="#">Подробнее</a>
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="default-btn">
+                            Заказать
+                        </a>
+                    </div>
+                </div>
+                <div class="about_item">
+                    <img src="img/about-2.png" alt="">
+                    <div class="about__item-title">
+                        Адвокатское сопровождение
+                    </div>
+                    <div class="about__item-text">
+                        Мы гарантируем полное профессиональное обслуживание клиентов в заявленных сферах деятельности и
+                        соблюдение
+                        конфиденциальности.
+                    </div>
+                    <div class="about_item-btn">
+                        <a class="about__item-link" href="#">Подробнее</a>
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="default-btn">
+                            Заказать
+                        </a>
+                    </div>
+                </div>
+                <div class="about_item">
+                    <img src="img/about-3.png" alt="">
+                    <div class="about__item-title">
+                        Налоговый аудит
+                    </div>
+                    <div class="about__item-text">
+                        Налоговый аудит проводят перед проведением налоговых проверок; при оценке возможных налоговых
+                        рисков; при оптимизации налогообложения.
+                    </div>
+                    <div class="about_item-btn">
+                        <a class="about__item-link" href="#">Подробнее</a>
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="default-btn">
+                            Заказать
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <div id="modal">
         <h2>Hello!</h2>
