--- a/index.html
+++ b/index.html
@@ -96,67 +96,69 @@
         </div> 
     </section>
 
-    <section class="about">
-        <div class="contaner">
-            <div class="about__top">
-                <div class="about_title-box">
-                    <div class="about__title">
+    <section class="services">
+        <div class="container">
+            <div class="services__top">
+                <div class="services__title-box">
+                    <div class="services__title">
                         Наши Услуги
                     </div>
-                    <div class="about__text">
+                    <div class="services__text">
                         Комплексный подход к вашему вопросу, своевременная правовую помощь, представление интересов во
                         всех судебных инстанциях.
                     </div>
                 </div>
-                <a href="" class="about__btn">
+                <div class="services__btn">
+                <a href="" class="services__btn">
                     Показать все услуги
                 </a>
             </div>
-            <div class="about__items">
-                <div class="about_item">
+            </div>
+            <div class="services__items">
+                <div class="services__item">
                     <img src="img/about-1.png" alt="">
-                    <div class="about__item-title">
+                    <div class="services__item-title">
                         Банкротство и ликвидация
                     </div>
-                    <div class="about__item-text">
+                    <div class="services__item-text">
                         Полное прекращение существования юридического лица с сохранением легальности всей предыдущей
                         деятельности
                     </div>
-                    <div class="about_item-btn">
-                        <a class="about__item-link" href="#">Подробнее</a>
+                    <div class="services__item-btn">
+                        <a class="services__item-link" href="#">Подробнее</a>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="default-btn">
                             Заказать
                         </a>
                     </div>
                 </div>
-                <div class="about_item">
+                <div class="services__item">
                     <img src="img/about-2.png" alt="">
-                    <div class="about__item-title">
+                    <div class=services__item-title">
                         Адвокатское сопровождение
                     </div>
-                    <div class="about__item-text">
+                    <div class="services__item-text">
                         Мы гарантируем полное профессиональное обслуживание клиентов в заявленных сферах деятельности и
                         соблюдение
                         конфиденциальности.
                     </div>
-                    <div class="about_item-btn">
-                        <a class="about__item-link" href="#">Подробнее</a>
+                    <div class="services__item-btn">
+                        <a class="services__item-link" href="#">Подробнее</a>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="default-btn">
                             Заказать
                         </a>
                     </div>
                 </div>
-                <div class="about_item">
+                <div class="services__item">
                     <img src="img/about-3.png" alt="">
-                    <div class="about__item-title">
+                    <div class="services__item-title">
                         Налоговый аудит
                     </div>
-                    <div class="about__item-text">
+                    <div class="services__item-text">
                         Налоговый аудит проводят перед проведением налоговых проверок; при оценке возможных налоговых
                         рисков; при оптимизации налогообложения.
                     </div>
-                    <div class="about_item-btn">
-                        <a class="about__item-link" href="#">Подробнее</a>
+                    <div class="services__item-btn">
+                        <a class="services__item-link" href="#">Подробнее</a>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="default-btn">
                             Заказать
                         </a>
