--- a/index.html
+++ b/index.html
@@ -168,6 +168,26 @@
         </div>
     </section>
 
+    <section class="about">
+        <div class="container">
+            <div class="about__inner">
+                <div class="about__title">
+                    О компании
+                </div>
+                <div class="about__text">
+                    Компания специализируется на оказании услуг в сфере корпоративного права, налогового консалтинга,
+                    представительства в судах, ликвидации и банкротства предприятий. На сегодняшний день, коллектив
+                    компании
+                    объединяет
+                    высокопрофессиональных экспертов имеющих
+                </div>
+                <a href="#" class="about__btn default-btn">
+                    Узнать больше
+                </a>
+            </div>
+        </div>
+    </section>
+
     <div id="modal">
         <h2>Hello!</h2>
         <p>You are awesome!</p>
