--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <div class="header__contacts">
                     <a class="header__phone" href="tel:380963092145">+38 (096) 309 21 45</a>
                     <a class="header__email" href="mailto:layout585@gmail.com">layout585@gmail.com</a>
-                    <a data-fancybox data-src="#modal" href="javascript:;" class="header__btn" href="#">Бесплатная консультация</a>
+                    <a data-fancybox data-src="#modal" href="javascript:;" class="header__btn" href="#">Бесплатная
+                        консультация</a>
                 </div>
             </div>
         </div>
@@ -93,7 +94,7 @@
                     </div>
                 </div>
             </div>
-        </div> 
+        </div>
     </section>
 
     <section class="services">
@@ -109,10 +110,10 @@
                     </div>
                 </div>
                 <div class="services__btn">
-                <a href="" class="services__btn">
-                    Показать все услуги
-                </a>
-            </div>
+                    <a href="" class="services__btn">
+                        Показать все услуги
+                    </a>
+                </div>
             </div>
             <div class="services__items">
                 <div class="services__item">
@@ -187,6 +188,62 @@
             </div>
         </div>
     </section>
+    
+    <section class="form">
+        <div class="container">
+            <div class="form__inner">
+                <div class="form__content">
+                    <div class="form__title-box">
+                        <div class="form__title">
+                            Получить Консультацию
+                        </div>
+                        <div class="form__text">
+                            Комплексный подход к вашему вопросу, своевременная правовую помощь, представление интересов
+                            во
+                            всех судебных инстанциях.
+                        </div>
+                    </div>
+                    <div class="form__box">
+                        <form>
+                            <div class="form__box-inner">
+                                <div class="form__box-left">
+                                    <label>
+                                        E-mail
+                                        <input type="text">
+                                    </label>
+                                    <label>
+                                        Контактный телефон
+                                        <input type="text">
+                                    </label>
+                                    <label>
+                                        ФИО
+                                        <input type="text">
+                                    </label>
+                                    <label>
+                                        Тема вопроса
+                                        <selection>
+                                            <option></option>
+                                            <option></option>
+                                            <option></option>
+                                            <option></option>
+                                        </selection>
+                                    </label>
+                                </div>
+                                <div class="form__box-right">
+                                    <label>
+                                        Сообщение
+                                        <textarea></textarea>
+                                    </label>
+                                    <button type="submit">Получить консультацию</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
     <div id="modal">
         <h2>Hello!</h2>
@@ -199,4 +256,4 @@
     <script src="js/main.js"></script>
 </body>
 
-</html>  
+</html>
