Update section (form)

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
         </div>
     </section>
-    
+
     <section class="form">
         <div class="container">
             <div class="form__inner">
@@ -221,12 +221,12 @@
                                     </label>
                                     <label>
                                         Тема вопроса
-                                        <selection>
-                                            <option></option>
-                                            <option></option>
-                                            <option></option>
-                                            <option></option>
-                                        </selection>
+                                        <select>
+                                            <option>-----------------</option>
+                                            <option>+++++++++++++++++</option>
+                                            <option>11111111111111111</option>
+                                            <option>44444444444444444</option>
+                                        </select>
                                     </label>
                                 </div>
                                 <div class="form__box-right">
