--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/jquery.formstyler.css">
+    <!-- <link rel="stylesheet" href="css/jquery.formstyler.theme.css"> -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -234,7 +236,7 @@
                                         Сообщение
                                         <textarea></textarea>
                                     </label>
-                                    <button type="submit">Получить консультацию</button>
+                                    <button class="default-btn" type="submit">Получить консультацию</button>
                                 </div>
                             </div>
                         </form>
@@ -253,6 +255,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.formstyler.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
