--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/jquery.formstyler.css"> 
+    <link rel="stylesheet" href="css/jquery.formstyler.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -243,7 +243,38 @@
                 </div>
             </div>
         </div>
+    </section>
 
+    <section class="advantages">
+        <div class="container">
+            <div class="advantages__inner">
+                <div class="advantages-item">
+                    <div class="advantages__title">
+                        Десятки добровольных ликвидаций ежемесячно
+                    </div>
+                    <div class="advantages__text">
+                        Мы умеем минимизировать все риски в процессе добровольной ликвидации юридических лиц.
+                    </div>
+                </div>
+                <div class="advantages-item">
+                    <div class="advantages__title">
+                        Отличное знание законов в сфере банкротства
+                    </div>
+                    <div class="advantages__text">
+                        Позволяют нам эффективно отстаивать как интересы кредиторов, так и интересы собственников
+                        проблемной организации.
+                    </div>
+                </div>
+                <div class="advantages-item">
+                    <div class="advantages__title">
+                        Большой опыт сопровождения банкротства
+                    </div>
+                    <div class="advantages__text">
+                        Мы обладаем большим опытом сопровождения процедур банкротства предприятий.
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <div id="modal">
