--- a/index.html
+++ b/index.html
@@ -277,6 +277,58 @@
         </div>
     </section>
 
+    <section class="news">
+        <div class="container">
+            <div class="news__top">
+                <div class="news__title-box">
+                    <div class="news__title">
+                        Новости Компании
+                    </div>
+                    <div class="news__text">
+                        Комплексный подход к вашему вопросу, своевременная правовую помощь, представление интересов во
+                        всех судебных инстанциях.
+                    </div>
+                </div>
+                <div class="news__btn">
+                    <a href="" class="news__btn">
+                        Открыть все новости
+                    </a>
+                </div>
+            </div>
+            <div class="news__inner">
+                <div class="news__slider"></div>
+                <div class="news__blog">
+                    <div class="news__images">
+                        <img src="img/news-1.jpg" alt="">
+                        <div class="news__date">03.04</div>
+                    </div>
+                    <div class="news__blog-title">
+                        Новость компании
+                    </div>
+                    <div class="news__blog-text">
+                        На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих
+                        специализации в отдельных областях права...»
+                    </div>
+                </div>
+            </div>
+            <div class="news__blog">
+                <div class="news__images">
+                    <img src="img/news-2.jpg" alt="">
+                    <div class="news__date">03.04</div>
+                </div>
+                <div class="news__blog-title">
+                    Новость компании
+                </div>
+                <div class="news__blog-text">
+                    На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих
+                    специализации в отдельных областях права...»
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
+    </section>
+
     <div id="modal">
         <h2>Hello!</h2>
         <p>You are awesome!</p>
