--- a/index.html
+++ b/index.html
@@ -296,8 +296,56 @@
                 </div>
             </div>
             <div class="news__inner">
-                <div class="news__slider"></div>
-                <div class="news__blog">
+                <div class="news__slider">
+                    <div class="news__slider-inner">
+                        <div class="news__slider-item">
+                            <div class="news__slider-title">
+                                Банкротство и ликвидация предприятия в Украине
+                            </div>
+                            <div class="news__slider-text">
+                                «На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов
+                                имеющих специализации в отдельных областях права. На сегодняшний день, коллектив
+                                компании объединяет высокопрофессиональных экспертов имеющих специализации в отдельных
+                                областях права. На сегодняшний день, коллектив компании объединяет
+                                высокопрофессиональных экспертов имеющих специализации в отдельных областях права...»
+                            </div>
+                            <div class="news__slider-autor">
+                                Андрей Ворошилов, генеральный директор компании Bankom
+                            </div>
+                        </div>
+                        <div class="news__slider-item">
+                            <div class="news__slider-title">
+                                Банкротство и ликвидация предприятия в Украине
+                            </div>
+                            <div class="news__slider-text">
+                                «На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов
+                                имеющих специализации в отдельных областях права. На сегодняшний день, коллектив
+                                компании объединяет высокопрофессиональных экспертов имеющих специализации в отдельных
+                                областях права. На сегодняшний день, коллектив компании объединяет
+                                высокопрофессиональных экспертов имеющих специализации в отдельных областях права...»
+                            </div>
+                            <div class="news__slider-autor">
+                                Андрей Ворошилов, генеральный директор компании Bankom
+                            </div>
+                        </div>
+                        <div class="news__slider-item">
+                            <div class="news__slider-title">
+                                Банкротство и ликвидация предприятия в Украине
+                            </div>
+                            <div class="news__slider-text">
+                                «На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов
+                                имеющих специализации в отдельных областях права. На сегодняшний день, коллектив
+                                компании объединяет высокопрофессиональных экспертов имеющих специализации в отдельных
+                                областях права. На сегодняшний день, коллектив компании объединяет
+                                высокопрофессиональных экспертов имеющих специализации в отдельных областях права...»
+                            </div>
+                            <div class="news__slider-autor">
+                                Андрей Ворошилов, генеральный директор компании Bankom
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="news__blog">
                     <div class="news__images">
                         <img src="img/news-1.jpg" alt="">
                         <div class="news__date">03.04</div>
@@ -309,23 +357,21 @@
                         На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих
                         специализации в отдельных областях права...»
                     </div>
-                </div>
+                </a>
+                <a href="#" class="news__blog">
+                    <div class="news__images">
+                        <img src="img/news-2.jpg" alt="">
+                        <div class="news__date">03.04</div>
+                    </div>
+                    <div class="news__blog-title">
+                        Новость компании
+                    </div>
+                    <div class="news__blog-text">
+                        На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих
+                        специализации в отдельных областях права...»
+                    </div>
+                </a>
             </div>
-            <div class="news__blog">
-                <div class="news__images">
-                    <img src="img/news-2.jpg" alt="">
-                    <div class="news__date">03.04</div>
-                </div>
-                <div class="news__blog-title">
-                    Новость компании
-                </div>
-                <div class="news__blog-text">
-                    На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих
-                    специализации в отдельных областях права...»
-                </div>
-            </div>
-        </div>
-        </div>
         </div>
     </section>
 
