--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/jquery.formstyler.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 
 <body>
@@ -49,7 +50,7 @@
         </div>
     </header>
 
-    <section class="slider">
+    <!-- <section class="slider">
         <div class="container">
             <div class="slider__inner">
                 <div class="slider__item">
@@ -409,7 +410,7 @@
                     © 2017 Template by Anastasia Shaposhnyk. Все права защищены.
                 </div>
             </div>
-        </div>
+        </div> -->
     </footer>
 
     <div id="modal">
