Editing mobile version (header).
Editing (#modal) and mobile version.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                         </a>
                     </div>
                     <nav class="menu">
+                        <div class="header__btn-menu">
+                            <span class="icon-bars"></span>
+                        </div>
                         <ul>
                             <li><a href="#">Главная</a></li>
                             <li><a href="#">О компании</a></li>
