--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+
+    <!-- Header -->
+
     <header class="header">
         <div class="header__top">
             <div class="container">
@@ -53,7 +56,9 @@
         </div>
     </header>
 
-    <!-- <section class="slider">
+    <!-- Slider -->
+
+    <section class="slider">
         <div class="container">
             <div class="slider__inner">
                 <div class="slider__item">
@@ -101,6 +106,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Services -->
 
     <section class="services">
         <div class="container">
@@ -174,7 +181,7 @@
         </div>
     </section>
 
-    <section class="about">
+    <!-- <section class="about">
         <div class="container">
             <div class="about__inner">
                 <div class="about__title">
