Bug fix (about).

--- a/index.html
+++ b/index.html
@@ -181,7 +181,9 @@
         </div>
     </section>
 
-    <!-- <section class="about">
+    <!-- About -->
+
+    <section class="about">
         <div class="container">
             <div class="about__inner">
                 <div class="about__title">
@@ -201,7 +203,7 @@
         </div>
     </section>
 
-    <section class="form">
+    <!-- <section class="form">
         <div class="container">
             <div class="form__inner">
                 <div class="form__content">
