Bug fix (@media).

--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@
         </div>
     </section>
 
-    <!-- <section class="form">
+    <!-- Form -->
+
+     <section class="form">
         <div class="container">
             <div class="form__inner">
                 <div class="form__content">
@@ -258,7 +260,9 @@
         </div>
     </section>
 
-    <section class="advantages">
+    <!-- Advantages -->
+
+   <section class="advantages">
         <div class="container">
             <div class="advantages__inner">
                 <div class="advantages-item">
@@ -290,7 +294,7 @@
         </div>
     </section>
 
-    <section class="news">
+   <!--  <section class="news">
         <div class="container">
             <div class="news__top">
                 <div class="news__title-box">
