Update section (news).
Update section (news).

--- a/index.html
+++ b/index.html
@@ -294,7 +294,9 @@
         </div>
     </section>
 
-   <!--  <section class="news">
+    <!-- News -->
+
+    <section class="news">
         <div class="container">
             <div class="news__top">
                 <div class="news__title-box">
@@ -391,6 +393,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
 
     <footer class="footer">
         <div class="footer__content">
