--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
     <!-- Form -->
 
-     <section class="form">
+    <section class="form">
         <div class="container">
             <div class="form__inner">
                 <div class="form__content">
@@ -262,7 +262,7 @@
 
     <!-- Advantages -->
 
-   <section class="advantages">
+    <section class="advantages">
         <div class="container">
             <div class="advantages__inner">
                 <div class="advantages-item">
@@ -416,10 +416,8 @@
                             <li><a class="footer__adress" href="#">Киев, ул.Пушиной, 13</a></li>
                         </ul>
                     </div>
-                    <div class="footer_map">
-                        <iframe width="630px" height="250px"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.124391996489!2d30.364922015731644!3d50.457408279476354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cc919501b4ef%3A0x71a476f68f4c8246!2z0YPQuy4g0KTQtdC-0LTQvtGA0Ysg0J_Rg9GI0LjQvdC-0LksIDEzLCDQmtC40LXQsiwg0KPQutGA0LDQuNC90LAsIDAyMDAw!5e0!3m2!1sru!2sru!4v1565882714750!5m2!1sru!2sru"
-                            frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <div class="footer__map">
+                        <iframe height="250px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.124391996489!2d30.364922015731644!3d50.457408279476354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cc919501b4ef%3A0x71a476f68f4c8246!2z0YPQuy4g0KTQtdC-0LTQvtGA0Ysg0J_Rg9GI0LjQvdC-0LksIDEzLCDQmtC40LXQsiwg0KPQutGA0LDQuNC90LAsIDAyMDAw!5e0!3m2!1sru!2sru!4v1565882714750!5m2!1sru!2sru" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -430,7 +428,7 @@
                     © 2017 Template by Anastasia Shaposhnyk. Все права защищены.
                 </div>
             </div>
-        </div> -->
+        </div>
     </footer>
 
     <div id="modal">
