--- a/index.html
+++ b/index.html
@@ -431,6 +431,8 @@
         </div>
     </footer>
 
+    <!-- #Modal (окно вызова) -->
+
     <div id="modal">
         <form>
             <input type="text" placeholder="Ваше имя">
